--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,7 +20,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  nayuta_sensors: "^1.0.0"
+  sensors: ^2.0.3
 
   flutter_interactional_widget:
     path: ../
